Fixed issue where the main element tag would not render on IE

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,6 +1,7 @@
 @import '../../assets/_colors.scss';
 
 .Layout {
+  display: block;
   background-color: $dark-teal;
   overflow: auto;
   min-height: 100%;
